_generated-doc/2.7/config/quarkus-security-jdbc-elytron-security-jdbc-jdbc-security-realm-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-security-jdbc-elytron-security-jdbc-jdbc-security-realm-build-time-config_configuration]]link:#quarkus-security-jdbc-elytron-security-jdbc-jdbc-security-realm-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-jdbc-elytron-security-jdbc-jdbc-security-realm-build-time-config_quarkus.security.jdbc.realm-name]]`link:#quarkus-security-jdbc-elytron-security-jdbc-jdbc-security-realm-build-time-config_quarkus.security.jdbc.realm-name[quarkus.security.jdbc.realm-name]`

[.description]
--
The realm name
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-security-jdbc-elytron-security-jdbc-jdbc-security-realm-build-time-config_quarkus.security.jdbc.enabled]]`link:#quarkus-security-jdbc-elytron-security-jdbc-jdbc-security-realm-build-time-config_quarkus.security.jdbc.enabled[quarkus.security.jdbc.enabled]`

[.description]
--
If the properties store is enabled.
--|boolean 
|`false`

|===